<resources>
    <string name="app_name">network_apps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous_todo">Previous todo</string>
    <string name="following_todo">Following todo</string>

    <string name="todo_userId">"userId": </string>
    <string name="todo_id">"id": </string>
    <string name="todo_title">"title": </string>
    <string name="todo_completed">"completed": </string>

    <string name="conference_title">Conferences</string>
    <string name="information_title">Information_title</string>
    <string name="sample">Sample</string>
    <string name="information_back">Conferences</string>
    <string name="information_location">Information_location</string>
    <string name="information_period">Information_period</string>
    <string name="information_link">Information_link</string>
    <string name="posts">Posts</string>
    <string name="user_information_loading_error">..User information loading error..</string>
</resources>